feat: changed main screen fully

--- a/index.html
+++ b/index.html
@@ -38,60 +38,59 @@
   <div id="parallax-world-of-ugg">
 
     <!-- Hero Section (Parallax) -->
-    <section class="parallax-one">
-      <div class="title">
-        <h1>Daamin Nacer</h1>
-        <h3>Software Developer, Unity Developer</h3>
+    <header class="vh-100 d-flex align-items-center justify-content-center text-center bg-dark text-white" style="background-image: url('./images/hero-bg.jpg');">
+    <div class="container">
+      <h1 class="display-4 fw-bold">Daamin Nacer</h1>
+      <p class="lead">Software & Unity Developer</p>
+      <p class="mx-auto" style="max-width: 700px;">
+        I'm a passionate developer focused on crafting immersive, interactive experiences.  
+        I love building with Unity, experimenting with game mechanics, and exploring how technology brings ideas to life.
+      </p>
+    </div>
+  </header>
 
+    <!-- Space Adventure Section (Parallax) -->
+    <header class="parallax-three vh-100 d-flex align-items-center justify-content-center text-center text-white">
+  <div class="container">
+    <div class="title">
+        <h1>Space Adventure</h1>
       </div>
-    </section>
-    <section>
-      <div class="block">
-        <p><span class="first-character atw">I</span>'m Daamin Nacer, a passionate game developer with a focus on Unity
-          and software development. I specialize in creating immersive game experiences and love exploring new mechanics
-          and technologies. Currently studying Game Development at the Hogeschool van Amsterdam, I'm always looking for
-          opportunities to challenge myself and grow as a developer, whether through personal projects or collaborating
-          with teams on exciting game dev challenges.</p>
-      </div>
-    </section>
-
-    <!-- My Work Section (Parallax) -->
-    <section class="parallax-three">
-      <div class="title">
-        <h1>My Work</h1>
-
-      </div>
-    </section>
-
-    <section>
-      <div class="block">
-        <p><span class="first-character atw">I</span>n my free time, I'm passionate about game development. Whether it's
-          creating new games or experimenting with game mechanics, I love exploring different aspects of game design and
-          coding. It's a thrilling way for me to challenge myself, learn new techniques, and continuously improve as a
-          developer. I enjoy working on personal projects and collaborating on game dev challenges to push my creativity
-          further.</p>
-        <a class="nav-link btn btn-primary text-white" href="./Work/index.html">See my work</a>
-      </div>
-    </section>
-
-    <!-- Interests Section (Parallax) -->
-    <section class="parallax-two">
-      <div class="title">
-        <h1>My Interests</h1>
-      </div>
-    </section>
-
-    <section>
-      <div class="block">
-        <p><span class="first-character ny">M</span>y interests go beyond coding. I'm a huge fan of chess — it's a game
-          I find both relaxing and mentally stimulating. The strategy involved in chess mirrors how I approach
-          problem-solving in software development: always thinking several steps ahead. When I'm not playing chess, I
-          love gaming, especially puzzzle games, as it helps me unwind and get creative.
-        </p>
-      </div>
-    </section>
-
+    <p class="mx-auto" style="max-width: 700px;">
+A passion-driven reimagining of Space Invaders, blending classic arcade gameplay with modern upgrades and mechanics. Created to challenge myself both creatively and technically during a school project.
+    </p>
+    <a href="./Games/Space Adventure/index.html" class="btn btn-primary text-white mt-3">Try game</a>
+    <a href="./Work/index.html" class="btn btn-light mt-3">View All Projects</a>
   </div>
+</header>
+
+ <!-- Soaring krag (Parallax) -->
+    <header class="parallax-one vh-100 d-flex align-items-center justify-content-center text-center text-black">
+  <div class="container">
+    <div class="title" style="color: black;">
+        <h1>Soaring krag</h1>
+      </div>
+    <p class="mx-auto" style="max-width: 700px;">
+A creative 3D twist on Flappy Bird, featuring Krag a flying rock navigating rock-paper-scissors themed obstacles. Built to experiment with 3D mechanics, movement, and thoughtful game design in Unity.
+    </p>
+    <a href="https://daamin.itch.io/soaring-krag" class="btn btn-primary text-white mt-3">Try game</a>
+    <a href="./Work/index.html" class="btn btn-light mt-3">View All Projects</a>
+  </div>
+</header>
+
+<!-- Ludem Locus (Parallax) -->
+<header class="parallax-two vh-100 d-flex align-items-center justify-content-center text-center text-white">
+  <div class="container">
+    <div class="title">
+        <h1>Ludem Locus</h1>
+    </div>
+    <p class="mx-auto" style="max-width: 700px;">
+      A VR chess-themed escape room where players explore a virtual environment, solve chess-related puzzles, and navigate using joystick controls. Developed entirely in Unity and C#, combining strategy, interactivity, and immersive gameplay.
+    </p>
+    <a href="https://github.com/XtoadX/VR_Project" class="btn btn-primary text-white mt-3">View on GitHub</a>
+    <a href="./Work/index.html" class="btn btn-light mt-3">View All Projects</a>
+  </div>
+</header>
+
 
   <!-- Footer -->
   <footer class="footer">
