feat: added detailed pages to every project

--- a/Work/index.html
+++ b/Work/index.html
@@ -63,12 +63,10 @@
 
       <div class="col-md-4">
         <div class="card">
-          <video class="card-img-top" controls>
-            <source src="../Media/com.app.daamin-20230627-081956.mp4" type="video/mp4">
-          </video>
+          <img class="card-img-top" src="https://images.stockcake.com/public/c/0/f/c0f725a5-6353-4eaf-93a7-f102d58c7355_large/futuristic-vr-headset-stockcake.jpg" alt="Soaring Krag Screenshot">
           <div class="card-body">
-            <h1>Ludem Locus</h1>
-            <p>*Ludem Locus* is my first VR project, developed using Unity and C#. This chess-themed escape room
+            <h1><a href="./subpages/ludem_locus/index.html" target="_blank">Ludem Locus</a></h1>
+            <p>Ludem Locus is my first VR project, developed using Unity and C#. This chess-themed escape room
               combines my passion for chess with interactive VR gameplay. Players navigate the virtual environment using
               joystick controls, solving chess-related puzzles as they explore.</p>
             <p>While proud of this initial project, I see potential for improvement, especially in the visuals. I plan
@@ -76,67 +74,45 @@
               iterations.</p>
             <a class="nav-link btn btn-primary text-white" href="https://github.com/XtoadX/VR_Project">View on
               GitHub</a>
+                <a class="nav-link btn btn-primary text-white" href="./subpages/ludem_locus/index.html" >Learn More</a>
           </div>
         </div>
       </div>
 
-      <div class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="../images/soaring_krag.png" alt="Soaring Krag Screenshot">
-          <div class="card-body">
-            <h1><a href="https://daamin.itch.io/soaring-krag" target="_blank">Soaring Krag</a></h1>
-            <p>*Soaring Krag* is a 3D variation of the classic Flappy Bird game, where you control Krag, a flying rock,
-              navigating through a series of obstacles. Unlike the traditional game, the walls are made of "rock, paper,
-              scissors" elements where each wall presents a different type of challenge that corresponds to the game's
-              theme.</p>
-            <p>This project was developed entirely by me, and it allowed me to experiment with 3D mechanics and player
-              movement. I designed the game's mechanics, environment, and obstacles, and worked on optimizing the game
-              for a fun and engaging experience. It was an excellent opportunity to expand my skills in Unity and game
-              design.</p>
-            <a class="nav-link btn btn-primary text-white" href="https://daamin.itch.io/soaring-krag"
-              target="_blank">Play Now</a>
+        <div class="col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="../images/soaring_krag.png" alt="Soaring Krag Screenshot">
+            <div class="card-body">
+              <h1><a href="./subpages/soaring_krag/index.html" target="_blank">Soaring Krag</a></h1>
+              <p>Soaring Krag is a 3D variation of the classic Flappy Bird game, where you control Krag, a flying rock,
+                navigating through a series of obstacles. Unlike the traditional game, the walls are made of "rock, paper,
+                scissors" elements where each wall presents a different type of challenge that corresponds to the game's
+                theme.</p>
+              <p>This project was developed entirely by me, and it allowed me to experiment with 3D mechanics and player
+                movement. I designed the game's mechanics, environment, and obstacles, and worked on optimizing the game
+                for a fun and engaging experience. It was an excellent opportunity to expand my skills in Unity and game
+                design.</p>
+              <a class="nav-link btn btn-primary text-white" href="https://daamin.itch.io/soaring-krag"
+                target="_blank">Play Now</a>
+                <a class="nav-link btn btn-primary text-white" href="./subpages/soaring_krag/index.html" >Learn More</a>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="../images/hall_and_back.png" alt="To Hell and Back Screenshot">
-          <div class="card-body">
-            <h1><a href="https://kikje.itch.io/to-hell-and-back" target="_blank">To Hell and Back</a></h1>
-            <p><em>To Hell and Back</em> is an exciting boss rush game I'm developing with my talented team. Players
-              will face off against three unique and challenging bosses, each with their own distinct mechanics and
-              strategies. Right now, we're focused on perfecting these bosses and ensuring that each one offers a fresh
-              and dynamic experience for players. Our goal is to make each fight feel different, engaging, and
-              rewarding.</p>
-            <p>Though we're still in the early stages of development, we're working hard to make sure the game delivers
-              on its promise of intense, action-packed gameplay. While there aren't any major milestones completed just
-              yet, the team's passion and dedication are driving us forward. We're excited to share updates as we
-              continue to develop the game!</p>
-            <p>The vision for this game is clear: we want it to be an awesome and challenging experience for players,
-              and we're confident that with the team's skills and creativity, we'll get there. Stay tuned for future
-              updates as we complete the bosses and bring the game closer to its final form.</p>
-            <a class="nav-link btn btn-primary text-white" href="https://kikje.itch.io/to-hell-and-back"
-              target="_blank">Play Now (Early Demo)</a>
-          </div>
-        </div>
-      </div>
+  <div class="col-md-4">
+  <div class="card">
+    <img class="card-img-top" src="../images/space_adventure.png" alt="Space Adventure Screenshot">
+    <div class="card-body">
+      <h1><a href="./subpages/space_adventure/index.html" >Space Adventure</a></h1>
+      <p><em>Space Adventure</em> is a modern reimagining of the classic Space Invaders arcade game.  
+        Players explore floating islands, solve physics-based puzzles, and enjoy upgraded gameplay mechanics.  
+        This project was created as a school project to challenge myself creatively and technically.</p>
+      <a class="nav-link btn btn-primary text-white" href="../Games/Space Adventure/index.html"target="_blank" >Play Now</a>
+      <a class="nav-link btn btn-primary text-white" href="./subpages/space_adventure/index.html" >Learn More</a>
 
-      <div class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src=".././images/undertale.png" alt="Undertale Quiz Screenshot">
-          <div class="card-body">
-            <h1><a href="./Game/index.html">UnderTale Quiz</a></h1>
-            <p>This project represents one of my earliest endeavors in programming: a quiz application centered around
-              the game *Undertale*. While reviewing the code now, I can identify areas for improvement, particularly in
-              the function structure. For example, I initially created multiple small functions, which resulted in less
-              efficient code. However, this project marked a significant milestone in my development journey, and it's
-              gratifying to see how much my skills have evolved since then. It serves as a valuable reflection of my
-              growth as a developer.</p>
-          </div>
-        </div>
-      </div>
-
+    </div>
+  </div>
+</div>
 
 
       <!-- <div class="col-md-4">
@@ -193,19 +169,6 @@
             </svg></h5>
           <hr>
           Daaminnacer@gmail.com <br>
-        </div>
-        <div class="col-md-5">
-          <!-- <form>
-            <fieldset class="form-group">
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-            </fieldset>
-            <fieldset class="form-group">
-              <textarea class="form-control" id="exampleMessage" placeholder="Message"></textarea>
-            </fieldset>
-            <fieldset class="form-group text-xs-right">
-              <button type="button" class="btn btn-secondary-outline btn-light">Send</button>
-            </fieldset>
-          </form> -->
         </div>
       </div>
     </div>
