--- a/index.html
+++ b/index.html
@@ -92,22 +92,38 @@ A creative 3D twist on Flappy Bird, featuring Krag a flying rock navigating rock
 </header>
 
 
-  <!-- Footer -->
-  <footer class="footer">
+<footer class="footer">
     <div class="container">
       <div class="row">
         <div class="col-md-5">
-          <h5>Daamin Nacer</h5>
+          <h5><i class="fa "></i>Daamin Nacer</h5>
+          <div class="row">
+            <div class="col-6">
+              <ul class="list-unstyled">
+                <!-- <li><a href=""></a></li> -->
+              </ul>
+            </div>
+            <div class="col-6">
+              <ul class="list-unstyled">
+                <li><a href=""></a></li>
+              </ul>
+            </div>
+          </div>
           <ul class="nav">
-            <li class="nav-item"><a href="" class="nav-link pl-0"><i class="fa fa-facebook fa-lg"></i></a></li>
+            <!-- <li class="nav-item"><a href="" class="nav-link pl-0"><i class="fa fa-facebook fa-lg"></i></a></li> -->
           </ul>
+          <br>
         </div>
         <div class="col-md-2">
-          <h5>Contact Me</h5>
+          <h5 class="text-md-right">Contact Me <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+              fill="currentColor" class="bi bi-chat-left-dots" viewBox="0 0 16 16">
+              <path
+                d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+              <path
+                d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+            </svg></h5>
           <hr>
           Daaminnacer@gmail.com <br>
-        </div>
-        <div class="col-md-5">
         </div>
       </div>
     </div>
