--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="./About/index.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="./Work/index.html">Work</a></li>
-          <li class="nav-item"><a class="nav-link btn btn-primary text-white" href="./CV Daamin.pdf"
+          <li class="nav-item"><a class="nav-link btn btn-primary text-white" href="./Daamin_Nacer_CV.pdf"
               download="CV_Daamin">Download CV</a></li>
         </ul>
       </div>
